--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
   <div class="replay-item">
     <h4 class="replay-item__title">TITLE</h4>
     <p class="replay-item__date">DATE OR SUBTITLE</p>
-    <div class="iframe-container"><iframe class="responsive-iframe" src="VIDEO URL" allowfulscreen></iframe></div>
+    <div class="iframe-container"><iframe class="responsive-iframe" src="VIDEO URL" allowfulscreen="1" scrolling="no" frameborder="0"></iframe></div>
   </div>
   <div class="replay-item">
     <h4 class="replay-item__title">TITLE</h4>
     <p class="replay-item__date">DATE OR SUBTITLE</p>
-    <div class="iframe-container"><iframe class="responsive-iframe" src="VIDEO URL" allowfulscreen></iframe></div>
+    <div class="iframe-container"><iframe class="responsive-iframe" src="VIDEO URL" allowfulscreen="1" scrolling="no" frameborder="0"></iframe></div>
   </div>
   <div class="replay-item">
     <h4 class="replay-item__title">TITLE</h4>
     <p class="replay-item__date">DATE OR SUBTITLE</p>
-    <div class="iframe-container"><iframe class="responsive-iframe" src="VIDEO URL" allowfulscreen></iframe></div>
+    <div class="iframe-container"><iframe class="responsive-iframe" src="VIDEO URL" allowfulscreen="1" scrolling="no" frameborder="0"></iframe></div>
   </div>
   ...
 </div>
